<resources>
    <string name="app_name">City events</string>
    <string name="header">Event Reservation</string>
    <string name="business_account_header">Create a business account</string>
    <string name="create_account">Create account</string>
    <string name="contact_address">Contact and address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin_header">Signin to make reservation</string>
    <string name="signin">Signin</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="trylogin">Trying to login...</string>
    <string name="senddata">Sending data...</string>
    <string name="preparedBy">Prepared by</string>

    <string name="names">Names</string>
    <string name="business_name">Business name</string>
    <string name="business_type">Business type</string>
    <string name="business_tin">TIN</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="signup">Create account</string>
    <string name="create">Create</string>
    <string name="user_type">User type</string>

    <!--    Event strings-->
    <string name="event_header">Create an event</string>
    <string name="event_name">Event name</string>
    <string name="event_type">Event type</string>
    <string name="event_kickoff">Kick off time</string>
    <string name="event_kickon">Event closing</string>
    <string name="event_brief">Brief description</string>
    <string name="event_banners">Event Banners</string>
    <string name="event_full_agenda">Full description and agenda</string>
    <string name="event_reservation_allowed">Available seat</string>
    <string name="next">Next</string>
    <string name="available_seat">Available seat</string>
    <string name="reserve">Reserve</string>
    <string name="signup_business">Sign up as a business account</string>
    <string name="signup_standard">Sign up as a standard account</string>
    <string name="kickoffdate">Kickoff Date</string>
    <string name="kickofftime">Kickoff Time</string>
    <string name="closedate">Closing Date</string>
    <string name="closetime">Closing Time</string>
    <string name="passwordnotmatch">Password does not match</string>

    <string name="takeaction">Take action for this event</string>
    <string name="approvalmessage">Approve event if is legit,reject if not</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="back">Back</string>

    <!--    Validation -->
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_tin">Invalid tin number</string>
    <string name="all_field_required">All field are required</string>
    <string name="_3_images_required">3 Images required to publish your event</string>
    <string name="all_field_and_time_required">All field and kick off date and time are required</string>
    <string name="nonempty_credentials">Phone number and password should not be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">My GPS Location</string>
    <string name="notification_broadcast">Send notifications updates to all your followers</string>
    <string name="message">Message</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="title_reset_via_email">Enter your email to reset password</string>
    <string name="title_reset_verification">Enter code received to your email to change password</string>
    <string name="title_reset_newpassword">Add your new password</string>
    <string name="verification_code">Verification code (sent to your email)</string>
    <string name="verify">Verify</string>
    <string name="reset">Reset</string>
    <string name="check">Check</string>
    <string-array name="business_types">
        <item>Aerospace</item>
        <item>Transport</item>
        <item>Computer related</item>
        <item>Telecommunication</item>
        <item>Agriculture</item>
        <item>Construction</item>
        <item>Education</item>
        <item>Pharmaceutical</item>
        <item>Food related</item>
        <item>Health care</item>
        <item>Hospital</item>
        <item>Entertainment</item>
        <item>News Media</item>
        <item>Energy related</item>
        <item>Manufacturing</item>
        <item>Music</item>
        <item>Mining</item>
        <item>Electronics</item>
    </string-array>
    <string name="reservation_report_header">Download reservation report</string>
    <string name="select_event">Select event</string>
    <string name="download">Download</string>
</resources>