<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.business.AddEvent"
    android:layout_gravity="center"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="?actionBarSize">
            <TextView
                android:id="@+id/tvLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_alignParentTop="true"
                android:textAlignment="center"
                android:background="#FFC107"
                android:textColor="@color/white"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/lnyLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvheade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_header"
                    style="@style/header"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputtext"
                    />

                <TextView
                    android:id="@+id/tvEventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_type"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtEventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    style="@style/inputtext"
                    />
                <TextView
                    android:id="@+id/tvEventBriefDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_brief"
                    android:inputType="textMultiLine"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtEventBriefDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="3"
                    style="@style/inputtext"
                    />


                <TextView
                    android:id="@+id/tvReservationAllowed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_reservation_allowed"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtReservationAllowed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/inputtext"
                    />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputtext"
                    />

                <TextView
                    android:id="@+id/btnKickOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label"
                    android:text="@string/event_kickoff"
                    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnKickOffDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kickoffdate"
        style="@style/buttons"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="12dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="10dp"/>
    <Button
        android:id="@+id/btnKickOffTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kickofftime"
        style="@style/buttons"
        android:layout_marginLeft="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="12dp"
        android:drawableStart="@drawable/ic_baseline_access_time_24"
        android:drawablePadding="10dp"
        />
</LinearLayout>

                <TextView
                    android:id="@+id/btnKickOn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_kickon"
                    style="@style/label"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnCloseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closedate"
                        style="@style/buttons"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textSize="12dp"
                        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                        android:drawablePadding="10dp"
                        />
                    <Button
                        android:id="@+id/btnCloseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closetime"
                        style="@style/buttons"
                        android:layout_marginLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:textSize="12dp"
                        android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
                        android:drawablePadding="10dp"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/btnBanners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_banners"
                    style="@style/buttons"
                    android:visibility="visible"
                    android:drawableEnd="@drawable/ic_baseline_done_outline_24"
                    android:paddingRight="15dp"
                    />

                <GridView
                    android:id="@+id/grdView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvFullAgenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_full_agenda"
                    android:minLines="5"
                    android:maxLines="15"
                    style="@style/inputtext"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/edtFullAgenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="5"
                    android:maxLines="15"
                    style="@style/inputtext"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    style="@style/buttons"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnyHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/lnyLogin"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tvHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SERVER ADDRESS"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputtext"
                    />
                <Button
                    android:id="@+id/btnSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SET"
                    style="@style/buttons"
                    />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnViewAllocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View your allocation"
        style="@style/buttons"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>
</RelativeLayout>