<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.commons.ResetPassword"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_alignParentTop="true"
                android:textAlignment="center"
                android:background="#FFC107"
                android:textColor="@color/white"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/logo"
                />

            <LinearLayout
                android:id="@+id/lnyResetCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tvheade"
                    style="@style/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reset_via_email" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_email_24" />

                <Button
                    android:id="@+id/btnCheck"
                    style="@style/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_login_24"
                    android:paddingRight="15dp"
                    android:text="@string/check" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnyResetVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/imgLogo"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvheaderReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reset_verification"
                    style="@style/header"/>
                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    style="@style/label"/>
                <EditText
                    android:id="@+id/edtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputtext"
                    android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                    />

                <Button
                    android:id="@+id/btnVerify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    style="@style/buttons"
                    android:drawableEnd="@drawable/ic_baseline_login_24"
                    android:paddingRight="15dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnyResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvheaderResetPassword"
                    style="@style/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reset_newpassword" />

                <TextView
                    android:id="@+id/tvPassword"
                    style="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvConfirmPassword"
                    style="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnReset"
                    style="@style/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_login_24"
                    android:paddingRight="15dp"
                    android:text="@string/reset" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnViewAllocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View your allocation"
        style="@style/buttons"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>
</RelativeLayout>